--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <title>E-Commerce</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
